--- a/cap3.tex
+++ b/cap3.tex
@@ -16,15 +16,15 @@ Nesse capítulo, serão apresentadas as técnicas de geração de malhas bidimen
 
 \section{Avanço de fronteira}
 
-Este é um dos métodos mais populares de geração de malhas e consiste em criar os elementos no interior do domínio progressivamente a partir de um contorno especificando da região a ser preenchida (fig.~\ref{fig:imagem7}a). Este contorno é chamado de fronteira inicial ou borda, os elementos são gerados a partir dessa fronteira dada como entrada. Uma fronteira bidimensional é formada por um conjunto de arestas.
+Este é um dos métodos mais populares de geração de malhas e consiste em criar os elementos no interior do domínio progressivamente a partir de um contorno, especificando da região a ser preenchida (fig.~\ref{fig:imagem7}a). Este contorno é chamado de fronteira inicial ou borda. Os elementos são gerados a partir dessa fronteira dada como entrada. Uma fronteira bidimensional é formada por um conjunto de arestas.
 
-À medida em que o algoritmo progride, a fronteira avança em direção ao interior, sempre removendo ou adicionando elementos de fronteira até que todo o domínio seja preenchido. O algoritmo chega ao fim quando não há mais fronteira, ou seja, o domínio foi totalmente triangularizado. 
+À medida que o algoritmo progride, a fronteira avança em direção ao interior, sempre removendo ou adicionando elementos de fronteira até que todo o domínio seja preenchido. O algoritmo chega ao fim quando não há mais fronteira, ou seja, o domínio foi totalmente triangularizado. 
 
 Pode ocorrer do algoritmo não conseguir mais gerar elementos para uma determinada fronteira, isso indica que o algoritmo falhou. O caso de falha ocorre quando todos os possíveis elementos a serem criados se sobrepõe um elemento já existente. Por isso a importância de verificar se um elemento criado não sobrepõe um elemento já existente. Os casos de falha geralmente acontecem em modelos tridimensionais.
 
-Para gerar os novos triângulo no interior do domínio é necessário criar novos pontos que não pertencem à entrada, em geral são utilizados os pontos de Steiner para isso.
+Para gerar os novos triângulos no interior do domínio é necessário criar novos pontos que não pertencem à entrada. Em geral são utilizados os pontos de Steiner para isso.
 
-Enquanto houver arestas na fronteira um algoritmo nessa categoria irá proceder da seguinte forma, no caso 2D (fig.~\ref{fig:imagem7}):
+Enquanto houver arestas na fronteira, um algoritmo que se enquadrada nessa categoria irá proceder da seguinte forma, no caso 2D (fig.~\ref{fig:imagem7}):
  
  \begin{enumerate}
 \item{ Remova uma aresta da fronteira, a aresta base (fig.~\ref{fig:imagem7}b)}
@@ -43,9 +43,9 @@ Enquanto houver arestas na fronteira um algoritmo nessa categoria irá proceder 
      \label{fig:imagem7}
  \end{figure}
 
- Pelo fato da fronteira ser sempre respeitada, os algoritmos de avanço de fronteira têm facilidade em tratar regiões descontínuas, ou por conterem buracos, ou por serem regiões separadas. Como os elementos mais próximos da borda são gerados primeiro, eles irão ter em geral uma boa qualidade. A boa qualidade da malha gerada provem estabilidade e precisão na aplicação de métodos numéricos (como os métodos dos elementos finitos).
+ Pelo fato da fronteira ser sempre respeitada, os algoritmos de avanço de fronteira têm facilidade em tratar regiões descontínuas, ou por conterem buracos, ou por serem regiões separadas. Como os elementos mais próximos da borda são gerados primeiro, eles irão ter em geral uma boa qualidade. A boa qualidade da malha gerada provém estabilidade e precisão na aplicação de métodos numéricos (como os métodos dos elementos finitos).
 
-Porém, nem sempre todos os elementos gerados terão boa qualidade. Ao contrário dos elementos mais próximos da borda, os elementos mais internos à malha nem sempre terão boa qualidade devido à região torna-se menor a medida que a fronteira avança. Geralmente uma técnica de suavização ou otimização é aplicada na malha resultante do algoritmo para tratar esses casos.
+Porém, nem sempre todos os elementos gerados terão boa qualidade. Ao contrário dos elementos mais próximos da borda, os elementos mais internos à malha nem sempre terão boa qualidade devido à região torna-se menor à medida que a fronteira avança. Geralmente uma técnica de suavização ou otimização é aplicada na malha resultante do algoritmo para tratar esses casos.
 
 \section{Delaunay}
 
@@ -56,13 +56,13 @@ O critério de Delaunay para a formação dos triângulos é que não exista nen
  \begin{figure}[htbp]
      \centering
      \includegraphics[width=1\textwidth]{imagem8}
-     \caption{a) critério de Delaunay falhando para os dois triângulos. b) Triangulação valida respeitando o critério de Delaunay.} 
+     \caption{a) critério de Delaunay falhando para os dois triângulos. b) Triangulação válida respeitando o critério de Delaunay.} 
      \label{fig:imagem8}
  \end{figure}
 
 A malha gerada por Delaunay visa maximizar os ângulos internos dos triângulos gerados. Ou seja, dada uma aresta da triangulação de Delaunay, o ponto que forma o maior ângulo com essa aresta é o ponto que formará um triângulo de Delaunay com os outros 2 pontos desta aresta.
 
-Existem dois tipos de algoritmos de Delaunay. No primeiro tipo, encontra-se uma aresta que faz parte da triangulação, em geral é selecionada uma aresta que pertence ao fecho convexo como primeira aresta. A partir da primeira aresta é encontrado o ponto que formará um triângulo de Delaunay. Assim, com as novas arestas, encontra-se novos triângulos, em um algoritmo parecido com o de avanço de fronteira. No segundo tipo, a entrada é uma malha triangular não necessariamente de Delaunay e se modifica essa malha (de apenas um subconjunto de pontos da entrada) pré-existente (Figura~\ref{fig:imagem9}).
+Existem dois tipos de algoritmos de Delaunay. No primeiro tipo, encontra-se uma aresta que faz parte da triangulação. Em geral é selecionada uma aresta que pertence ao fecho convexo como primeira aresta. A partir da primeira aresta é encontrado o ponto que formará um triângulo de Delaunay. Assim, com as novas arestas, encontram-se novos triângulos, em um algoritmo parecido com o de avanço de fronteira. No segundo tipo, a entrada é uma malha triangular não necessariamente de Delaunay e se modifica essa malha (de apenas um subconjunto de pontos da entrada) pré-existente (Figura~\ref{fig:imagem9}).
 
  \begin{figure}[htbp]
      \centering
@@ -71,10 +71,10 @@ Existem dois tipos de algoritmos de Delaunay. No primeiro tipo, encontra-se uma 
      \label{fig:imagem9}
  \end{figure}
 
- Dependendo da disposição dos pontos da entrada a triangulação final pode não ter boa qualidade, gerando instabilidade em métodos numéricos. Uma alternativa para melhorar essa malha é fazer refinamentos e otimizações, que fazem uso de pontos de Steiner, são utilizados para se melhorar a qualidade da malha.
+ Dependendo da disposição dos pontos da entrada a triangulação final pode não ter boa qualidade, gerando instabilidade em métodos numéricos. Uma alternativa para melhorar essa malha é fazer refinamentos e otimizações, que fazem uso de pontos de Steiner, para melhorar a qualidade da malha.
 
 \section{Arbitrária}
 
-Vamos definir as chamadas malhas arbitrárias aquelas que não se enquadrarem nem como avanço de fronteira nem como Delaunay. Essas malhas em geral são geradas por algoritmos de varredura ou algum outro método. 
+Vamos definir as chamadas malhas arbitrárias como aquelas que não se enquadrarem nem como avanço de fronteira nem como Delaunay. Essas malhas em geral são geradas por algoritmos de varredura ou algum outro método. 
 
-Outro uso que essas malhas possuem é na demonstrações de teoremas sobre malhas. O problema de ordenação de pontos pode ser reduzido ao problema de geração de malhas bidimensionais \cite{bib:CarvalhoFigueiredo91}. Prova-se por redução que pode ser gerado uma malha triangular a partir do fecho convexo de um conjunto de pontos em duas dimensões numa complexidade na ordem de (n log n).
+Outro uso que essas malhas possuem é nas demonstrações de teoremas sobre malhas. O problema de ordenação de pontos pode ser reduzido ao problema de geração de malhas bidimensionais \cite{bib:CarvalhoFigueiredo91}. Prova-se por redução que pode ser gerada uma malha triangular a partir do fecho convexo de um conjunto de pontos em duas dimensões numa complexidade na ordem de (n log n).
