--- a/cap1.tex
+++ b/cap1.tex
@@ -10,11 +10,11 @@
 
 O maior desafio atual é desenvolver técnicas que possuam boa escalabilidade, ou seja, ter um aumento no desempenho sob carga quando mais recursos forem disponíveis. Ao mesmo tempo buscamos obter resultados tão bons quanto os resultados do algoritmo sequencial.
 
-Nosso trabalho está focado em malhas bidimensionais, mais precisamente triangulações. Essas malhas são bastante utilizadas em diversas áreas e aplicações. Na engenharia é bastante utilizado em métodos de elementos finitos(MEF). Em computação gráfica são muito utilizadas para a visualização e modelagem objetos e ambientes. Há usos também em  sistemas de informações geográficas e projetos assistidos por computadores para a modelagem de objetos industriais.
+Esse trabalho está focado em malhas bidimensionais, mais precisamente triangulações. Essas malhas são bastante utilizadas em diversas áreas e aplicações. Na engenharia são bastante utilizadas em métodos de elementos finitos(MEF). Em computação gráfica são muito utilizadas para a visualização e modelagem objetos e ambientes. Há usos também em  sistemas de informações geográficas e projetos assistidos por computadores para a modelagem de objetos industriais.
 
-A qualidade da malha gerada é bastante importante. Em MEFs por exemplo, a qualidade dos elementos (os polígonos, em malhas bidimensionais) são de extrema importância pois se a malha tiver uma grande quantidade de elementos ruins, é possível que o MEF não convirja. Por necessitar de malhas bastante refinadas, é comum que MEFs usem malhas grandes, com milhões de elementos.
+A qualidade da malha gerada é bastante importante. Em MEFs por exemplo, a qualidade dos elementos (os polígonos, em malhas bidimensionais) são de extrema importância, pois se a malha tiver uma grande quantidade de elementos ruins, é possível que o MEF não convirja. Por necessitar de malhas bastante refinadas, é comum que MEFs usem malhas grandes, com milhões de elementos.
 
-Em geração de malha para aplicações científicas é preciso ter uma boa técnica para garantir que os elementos gerados serão de boa qualidade, ou seja, no caso bidimensional que os triângulos sejam bons. Pode-se dizer que um triângulo é bom quando ele é quase equilátero, caso contrário, ele pode ser ruim (fig.~\ref{fig:imagem10}).
+Em geração de malha para aplicações científicas é preciso ter uma boa técnica para garantir que os elementos gerados serão de boa qualidade, ou seja, no caso bidimensional, que os triângulos sejam bons. Pode-se dizer que um triângulo é bom quando ele é quase equilátero, caso contrário, ele pode ser ruim (fig.~\ref{fig:imagem10}).
 
  \begin{figure}[htbp]
      \centering
@@ -23,5 +23,5 @@ Em geração de malha para aplicações científicas é preciso ter uma boa téc
      \label{fig:imagem10}
  \end{figure}
 
-O restante deste trabalho está dividido em quatro seções. No capítulo seguinte faz uma apresentação do que se tem feito atualmente na área de subdivisão de domínios. O capítulo 3 descreve os algoritmos existentes para geração de malhas bidimensionais, mais precisamente triangulações. Finalmente, no capítulo 4 vamos definir a linha de estudo além do cronograma do trabalho.
+O restante deste trabalho está dividido em quatro seções. No capítulo seguinte faz uma apresentação do que se tem feito atualmente na área de subdivisão de domínios. O capítulo 3 descreve os algoritmos existentes para geração de malhas bidimensionais, mais precisamente triangulações. Finalmente, no capítulo 4 irei definir a linha de estudo além do cronograma do trabalho.
 
