--- a/pre.tex
+++ b/pre.tex
@@ -13,7 +13,7 @@
 {\LARGE Daniel Nascimento Teixeira}
 \par
 \vspace{200pt}
-{\Huge Técnicas de Particionamento para Malhas}
+{\Huge Técnicas de decomposição de domínio para geração de malhas em paralelo}
 \par
 \vfill
 \textbf{{\large Fortaleza}\\
@@ -40,7 +40,7 @@
 {\LARGE Daniel Nascimento Teixeira}
 \par
 \vspace{200pt}
-{\Huge Técnicas de Particionamento para Malhas}
+{\Huge Técnicas de decomposição de domínio para geração de malhas em paralelo}
 \end{center}
 \par
 \vspace{90pt}
@@ -63,7 +63,7 @@
 \hspace{8em}\fbox{\begin{minipage}{10cm}
 Aluno, Daniel Nascimento Teixeira.
 
-\hspace{2em} Técnicas de Particionamento para Malhas
+\hspace{2em} Técnicas de decomposição de domínio para geração de malhas em paralelo
 
 \hspace{2em}\pageref{LastPage} páginas
 
