--- a/final.tex
+++ b/final.tex
@@ -1,24 +1,25 @@
 \pagestyle{empty}
 \cleardoublepage
 \pagestyle{fancy}
-\chapter{Direções Futuras}\label{cap4}
+\chapter{Conclusão e trabalhos futuros}\label{cap4}
 
-Foi feito um estudo nessa área de geração de malhas voltado para a subdivisão de domínios bidimensionais. Já foi dado início ao desenvolvimento de uma técnica de geração de malha baseada num particionamento utilizando \textit{quadtree}.
+Este trabalho apresentou um estudo na área de decomposição de domínio para a geração de malhas em paralelo. Já foi dado início ao desenvolvimento de uma técnica bidimensional de geração de malha baseada numa decomposição utilizando \textit{quadtree}.
 
-Este trabalho que estou propondo pode ser dividido basicamente em duas etapas. A primeira consiste em receber a entrada e dividi-la em pedaços que possam ser tratadas como novos domínios. Todos esses pedaços por sua vez possuem a quantidade de carga aproximadamente equivalentes.
+O trabalho proposto pode ser dividido basicamente em duas etapas. A primeira consiste em receber a entrada e dividi-la em partes que possam ser tratadas novos domínios independentes. Todos essas partes, por sua vez, possuem a quantidade de carga aproximadamente equivalentes.
 
-Existem vários pesquisadores estudando novas formas de subdividir domínios para geração de malhas tanto tridimensionais como bidimensionais. A técnica proposta utiliza uma \textit{quadtree} para estimar a carga de cada subdomínio que for gerado para se obter um bom balanceamento de carga entre os processadores.
+A técnica proposta utiliza uma \textit{quadtree} para estimar a carga de cada subdomínio que for gerado para se obter um bom balanceamento de carga entre os processadores.
 
-A segunda etapa será a geração da malha em cada um dos novos domínios. Qualquer algoritmo de triangulação dado uma borda como entrada pode ser utilizado, inclusive podem ser empregado algoritmos diferentes nos subdomínios. Além da triangulação, tem que ser feita a junção das diversas malhas geradas em uma só.
+A segunda etapa é a geração da malha em cada um dos novos domínios. Qualquer algoritmo de triangulação dado uma borda como entrada pode ser utilizado, podendo, inclusive, serem empregados algoritmos diferentes nos subdomínios. Além da triangulação, é necessário fazer a junção das diversas malhas geradas em uma só.
 
-Para esse trabalho estou propondo uma técnica de geração de malha por avanço de fronteira por particionamento do domínio em paralelo. O foco da técnica é a subdivisão dos domínios e não a geração da malha. O algoritmo de avanço de fronteira que estou utilizando para gerar malha está em \cite{bib:Miranda99} e \cite{bib:Cavalcante-Neto01}.
+Para esse trabalho estou propondo uma técnica de geração de malha por avanço de fronteira por particionamento do domínio em paralelo. O foco da técnica é a subdivisão dos domínios e não a geração da malha. Apesar de qualquer algoritmo poder ser utlizado, em particular, o algoritmo de avanço de fronteira que estou utilizando para gerar malha está em \cite{bib:Miranda99} e \cite{bib:Cavalcante-Neto01}.
 
 \section{Cronograma}
-Nesta seção apresento o cronograma de estudo e trabalho para conclusão da dissertação de mestrado.
+O cronograma de estudos e trabalho para conclusão da dissertação de mestrado pode ser visto na Figura~\ref{fig:tabela}.
 
  \begin{figure}[htbp]
      \begin{center}
      \includegraphics[width=1.1\textwidth]{tabela}
+     \caption{Cronograma de estudos e trabalho para conclusão da dissertação de mestrado.} 
      \label{fig:tabela}
      \end{center}
  \end{figure}
